# catdir

./: .catignore  CHANGELOG.md  GitVersion.yml  README.md  pyproject.toml
.github/workflows/: ci.yml
catdir/: catdir.py  main.py
test/: test_catdir.py
