[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catdir"
version = "0.1.0"
description = "Cat over directory"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bruno Fitas", email = "brunofitas@gmail.com" }]
keywords = ["directory", "cat", "file-tree", "ignore"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]
dependencies = []

[project.scripts]
catdir = "catdir.main:main"

[tool.setuptools]
packages = ["catdir"]
